--- a/example.html
+++ b/example.html
@@ -4,8 +4,7 @@
     <link rel="stylesheet" href="css/jquery.jOrgChart.css"/>
     <link rel="stylesheet" href="css/custom.css"/>
 
-    <script type="text/javascript" src="js/jquery-1.7.1.min.js"></script>
-
+    <script type="text/javascript" src="js/jquery-min.js"></script>
     <script src="js/jquery.jOrgChart.js"></script>
 
     <script>
